chnges according to client

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 class="flex flex-col sm:flex-row items-center space-y-2 sm:space-y-0 sm:space-x-4 text-xs sm:text-sm text-white">
                 <span>
                     <a href="tel:+919552552455" class="hover:text-[#1B6B93] transition">
-                        <i class="fas fa-phone mr-1 sm:mr-2"></i>+91 9552552455
+                        <i class="fas fa-phone mr-1 sm:mr-2"></i>+91&nbsp; 9552552455
                     </a>
                 </span>
                 <span class="hidden sm:inline">
@@ -141,12 +141,16 @@
             <div class="flex justify-between items-center">
                 <!-- Logo and Doctor Info -->
                 <div class="flex items-center space-x-2 sm:space-x-4">
-                    <img src="img/logo.png" alt="Clinic Logo" class="h-12 w-12 sm:h-16 sm:w-16">
+                  <img src="img/logo.png" alt="Clinic Logo" 
+             class="h-12 w-12 sm:h-16 sm:w-16 md:h-20 md:w-20 object-contain">
+
                     <div>
                         <h1 class="text-lg sm:text-xl lg:text-2xl font-bold text-[#0D5C75] leading-tight">
-                            Dr.Chandrashekhar Sonawane</h1>
-                        <p class="text-xs sm:text-sm lg:text-base text-[#1B6B93] leading-tight">Orthopaedic & Joint
-                            Replacement Surgeon</p>
+                            Dr. Chandrashekhar Sonawane
+                        </h1>
+                        <p class="text-xs sm:text-sm lg:text-base text-[#1B6B93] leading-tight">Orthopaedic-Joint
+                            Replacement Surgeon
+                        </p>
                     </div>
                 </div>
 
@@ -206,7 +210,7 @@
                     <div class="text-white max-w-xs sm:max-w-md md:max-w-lg lg:max-w-2xl">
                         <h2
                             class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl font-bold mb-2 sm:mb-4 leading-tight">
-                            <span class="text-[#D5E5D5]">Joint Replacement</span> Surgery
+                            <span class="text-[#D5E5D5]">Knee Replacement</span> Surgery
                         </h2>
                         <div class="space-x-2 sm:space-x-5">
                             <a href="contact.html">
@@ -282,13 +286,14 @@
                     <h3
                         class="text-2xl sm:text-3xl lg:text-4xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-[#164B60] to-[#1B6B93] mb-3 sm:mb-4">
                         Dr. Chandrashekhar Sonawane
+
                     </h3>
 
-                    <p class="text-base sm:text-lg text-gray-600 mb-3 sm:mb-4">Consultant Orthopaedic Knee and Hip joint
-                        replacement surgeon</p>
+                    <p class="text-base sm:text-lg text-gray-600 mb-3 sm:mb-4">Consultant Orhtopaedic- Knee and Hip
+                        Joint Replacement Surgeon</p>
                     <p class="text-sm sm:text-base text-gray-700 mb-4 sm:mb-6 leading-relaxed">
                         Dr. Chandrashekhar S. Sonawane, a renowned Orthopedic and Joint Replacement Surgeon based in
-                        Pune, extends his expertise across Nashik, Jalgaon, and Nandurbar districts. Known for his
+                        Pune, extends his expertise across Nashik, Jalgaon,Goa, Solapur , and Nandurbar districts. Known for his
                         patient-first approach, he combines surgical excellence with a strong emphasis on prevention
                         over intervention, ensuring holistic and compassionate orthopedic care.
                     </p>
@@ -305,48 +310,82 @@
     <section class="py-8 sm:py-12 lg:py-16">
         <div class="container mx-auto px-4 sm:px-6">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6 sm:gap-8 items-center">
+
+                <!-- LEFT: Clinic Info -->
                 <div class="order-2 md:order-1">
                     <h3
                         class="text-3xl sm:text-4xl lg:text-5xl font-bold bg-gradient-to-r from-[#164B60] via-[#1B6B93] to-[#4FC0D0] pb-2 text-transparent bg-clip-text mb-4 sm:mb-5">
                         Our Clinic
                     </h3>
 
-                    <div class="space-y-3 sm:space-y-4 text-gray-700">
-                        <div class="flex items-start">
-                            <i class="fas fa-map-marker-alt text-[#0D5C75] mr-3 mt-1 flex-shrink-0"></i>
-                            <a href="https://maps.app.goo.gl/TnHUTz3sAprAHR8e7?g_st=aw" target="_blank"
-                                class="text-gray-600 hover:text-blue-600 hover:underline transition-colors duration-200 text-sm sm:text-base">
-                                Dr. Shekhars Bone and Joint Clinic
-                                208, Second floor, crown world, mutkewadi, pune-nashik Hvy, chakan pune 410501
-                            </a>
+                    <div class="space-y-6 text-gray-700 text-sm sm:text-base">
+
+                        <!-- Chakan -->
+                        <div>
+                            <div class="flex items-start mb-1">
+                                <i class="fas fa-map-marker-alt text-[#0D5C75] mr-3 mt-1"></i>
+                                <a href="https://maps.app.goo.gl/TnHUTz3sAprAHR8e7?g_st=aw" target="_blank"
+                                    class=" text-[#164B60] hover:text-blue-600 hover:underline">
+                                    <strong>Chakan –</strong> 208, Second Floor, Crown World, Mutkewadi, Pune-Nashik
+                                    Highway, Chakan, Pune 410501
+                                </a>
+                            </div>
+                            <div class="flex items-center ml-6">
+                                <i class="fas fa-clock text-[#0D5C75] mr-2"></i>
+                                Mon–Sat: 3:00 PM – 8:00 PM
+                            </div>
                         </div>
 
-                        <div class="flex items-start">
-                            <i class="fas fa-map-marker-alt text-[#0D5C75] mr-3 mt-1 flex-shrink-0"></i>
-                            <a href="https://maps.app.goo.gl/kk4Dk5w5zhRBbKaR8?g_st=aw" target="_blank"
-                                class="text-gray-600 hover:text-blue-600 hover:underline transition-colors duration-200 text-sm sm:text-base">
-                                Dr. Shekhars Bone and Joint Clinic
-                                A- 201, Comfort Zone Next, Baner Balewadi road, Near New Era Bekary baner pune - 411045
-                            </a>
+                        <!-- Baner -->
+                        <div>
+                            <div class="flex items-start mb-1">
+                                <i class="fas fa-map-marker-alt text-[#0D5C75] mr-3 mt-1"></i>
+                                <a href="https://maps.app.goo.gl/kk4Dk5w5zhRBbKaR8?g_st=aw" target="_blank"
+                                    class=" text-[#164B60] hover:text-blue-600 hover:underline">
+                                    <strong>Baner –</strong> A-201, Comfort Zone Next, Baner-Balewadi Road, Near New Era
+                                    Bakery, Baner, Pune 411045
+                                </a>
+                            </div>
+                            <div class="flex items-center ml-6">
+                                <i class="fas fa-clock text-[#0D5C75] mr-2"></i>
+                                Mon & Wed: By Appointment
+                            </div>
                         </div>
 
-                        <div class="flex items-center">
-                            <i class="fas fa-clock text-[#0D5C75] mr-3 flex-shrink-0"></i>
-                            <span class="text-sm sm:text-base">Mon-Sat: 3pm-8pm</span>
+                        <!-- Wakad -->
+                        <div>
+                            <div class="flex items-start mb-1">
+                                <i class="fas fa-map-marker-alt text-[#0D5C75] mr-3 mt-1"></i>
+                                <a href="https://maps.app.goo.gl/u9PA8AFYJdcHU3qw5" target="_blank"
+                                    class=" text-[#164B60] hover:text-blue-600 hover:underline">
+                                    <strong>Wakad –</strong> 206 - Second Floor, Solitaire Business Hub, Opp. to
+                                    Ambiance hotel, Vishnu devnagar, wakad, Pune - 411057
+                                    </span>
+                            </div>
+                            <div class="flex items-center ml-6">
+                                <i class="fas fa-clock text-[#0D5C75] mr-2"></i>
+                                Tue & Thu: By Appointment
+                            </div>
                         </div>
+
+                        <!-- Contact -->
                         <div class="flex items-center">
-                            <i class="fas fa-phone text-[#0D5C75] mr-3 flex-shrink-0"></i>
+                            <i class="fas fa-phone text-[#0D5C75] mr-3"></i>
                             <a href="tel:+919552552455"
-                                class="text-gray-700 hover:text-blue-600 transition-colors duration-200 text-sm sm:text-base">
-                                +91 95525 52455
+                                class="text-gray-700 hover:text-blue-600 transition duration-200">
+                                +91&nbsp; 95525 52455
                             </a>
                         </div>
                     </div>
+
+                    <!-- Button -->
                     <a href="contact.html"
                         class="bg-[linear-gradient(to_right,#164B60,#1B6B93)] hover:bg-[linear-gradient(to_right,#1B6B93,#4FC0D0)] text-white px-4 sm:px-6 py-2 sm:py-3 mt-4 sm:mt-6 rounded-lg sm:rounded-xl inline-block text-sm sm:text-base">
                         Book Appointment
                     </a>
                 </div>
+
+                <!-- RIGHT: Image Grid -->
                 <div class="grid grid-cols-2 gap-3 sm:gap-4 order-1 md:order-2">
                     <!-- Tall vertical card -->
                     <div class="row-span-2 rounded-lg shadow-[0_8px_16px_rgba(0,0,0,0.6)] overflow-hidden">
@@ -367,6 +406,7 @@
         </div>
     </section>
 
+
     <!-- Appointment Banner -->
     <section class="bg-[linear-gradient(to_right,#164B60,#1B6B93,#4FC0D0)] py-6 sm:py-8">
         <div class="container mx-auto px-4 sm:px-6 text-center">
@@ -375,7 +415,7 @@
             <a href="tel:+919552552455">
                 <button
                     class="group bg-white text-[#164B60] px-6 sm:px-8 py-2 sm:py-3 rounded-lg font-semibold text-base sm:text-lg transition duration-300 ease-in-out hover:bg-gradient-to-r hover:from-[#B3EAF2] hover:via-[#D4F1F9] hover:to-[#EAFBFF]">
-                    <i class="fas fa-phone mr-2"></i>Call Now: +91 9552552455
+                    <i class="fas fa-phone mr-2"></i>Call Now: +91&nbsp; 9552552455
                 </button>
             </a>
         </div>
@@ -390,23 +430,27 @@
             </h3>
 
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6">
-                <div class="bg-white p-4 sm:p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow">
+                <div
+                    class="bg-gradient-to-br from-[#f0f9ff] to-[#e0f7fa] p-4 sm:p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow">
                     <i class="fas fa-dumbbell text-3xl sm:text-4xl text-purple-600 mb-3 sm:mb-4"></i>
                     <h4 class="text-lg sm:text-xl font-semibold text-gray-800 mb-2">Physiotherapy</h4>
                     <p class="text-sm sm:text-base text-gray-600">Advanced physiotherapy treatments for faster recovery
                     </p>
                 </div>
-                <div class="bg-white p-4 sm:p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow">
+                <div
+                    class="bg-gradient-to-br from-[#f0f9ff] to-[#e0f7fa] p-4 sm:p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow">
                     <i class="fas fa-pills text-3xl sm:text-4xl text-green-600 mb-3 sm:mb-4"></i>
                     <h4 class="text-lg sm:text-xl font-semibold text-gray-800 mb-2">Pharmacy</h4>
                     <p class="text-sm sm:text-base text-gray-600">In-house pharmacy with all essential medications</p>
                 </div>
-                <div class="bg-white p-4 sm:p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow">
+                <div
+                    class="bg-gradient-to-br from-[#f0f9ff] to-[#e0f7fa] p-4 sm:p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow">
                     <i class="fas fa-x-ray text-3xl sm:text-4xl text-blue-600 mb-3 sm:mb-4"></i>
                     <h4 class="text-lg sm:text-xl font-semibold text-gray-800 mb-2">X-ray</h4>
                     <p class="text-sm sm:text-base text-gray-600">Digital X-ray facility for accurate diagnosis</p>
                 </div>
-                <div class="bg-white p-4 sm:p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow">
+                <div
+                    class="bg-gradient-to-br from-[#f0f9ff] to-[#e0f7fa] p-4 sm:p-6 rounded-lg shadow-lg text-center hover:shadow-xl transition-shadow">
                     <i class="fas fa-flask text-3xl sm:text-4xl text-red-600 mb-3 sm:mb-4"></i>
                     <h4 class="text-lg sm:text-xl font-semibold text-gray-800 mb-2">Pathology Lab</h4>
                     <p class="text-sm sm:text-base text-gray-600">Complete pathology services for comprehensive care</p>
@@ -428,19 +472,19 @@
                     <img src="img/deenanth.jpg" alt="Deenanath Mangeshkar Hospital"
                         class="w-32 h-32 sm:w-40 sm:h-40 lg:w-48 lg:h-48 rounded-full shadow-[0_8px_16px_rgba(0,0,0,0.6)] mx-auto mb-4 sm:mb-5 object-cover">
                     <h4 class="text-lg sm:text-xl font-semibold text-[#164B60] mb-2">Deenanath Mangeshkar Hospital</h4>
-                    <p class="text-sm sm:text-base text-gray-600">Renowned for Cardiology & Critical Care</p>
+                    <!-- <p class="text-sm sm:text-base text-gray-600">Renowned for Cardiology & Critical Care</p> -->
                 </div>
                 <div class="text-center">
                     <img src="img/manipal.jpg" alt="Manipal Center"
                         class="w-32 h-32 sm:w-40 sm:h-40 lg:w-48 lg:h-48 rounded-full shadow-[0_8px_16px_rgba(0,0,0,0.6)] mx-auto mb-4 sm:mb-5 object-cover">
                     <h4 class="text-lg sm:text-xl font-semibold text-[#164B60] mb-2">Manipal Hospital</h4>
-                    <p class="text-sm sm:text-base text-gray-600">Expertise in Diagnostics & Surgical Procedures</p>
+                    <!-- <p class="text-sm sm:text-base text-gray-600">Expertise in Diagnostics & Surgical Procedures</p> -->
                 </div>
                 <div class="text-center">
                     <img src="img/inamdar.jpg" alt="Inamdar Hospital"
                         class="w-32 h-32 sm:w-40 sm:h-40 lg:w-48 lg:h-48 rounded-full shadow-[0_8px_16px_rgba(0,0,0,0.6)] mx-auto mb-4 sm:mb-5 object-cover">
                     <h4 class="text-lg sm:text-xl font-semibold text-[#164B60] mb-2">Inamdar Hospital</h4>
-                    <p class="text-sm sm:text-base text-gray-600">Specialized in Orthopedics & Rehabilitation</p>
+                    <!-- <p class="text-sm sm:text-base text-gray-600">Specialized in Orthopedics & Rehabilitation</p> -->
                 </div>
             </div>
         </div>
@@ -507,8 +551,10 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-y-12 gap-x-10">
                 <!-- Clinic Info -->
                 <div class="space-y-4">
-                    <h4 class="text-xl font-semibold mb-2">Dr.Chandrashekhar Bone & Joint Clinic</h4>
-                    <p class="text-gray-300 leading-relaxed">Leading orthopedic care with advanced treatment options.
+                    <h4 class="text-xl font-semibold mb-2">Dr. ShekharS Bone and Joint Clinic</h4>
+                    <p class="text-gray-300 leading-relaxed">Excellence in Orthopaedic-Joint Replacement Surgery with
+                        advanced treatment options
+
                     </p>
                 </div>
 
@@ -517,20 +563,20 @@
                     <h4 class="text-xl font-semibold mb-2">Clinic Locations</h4>
                     <ul class="space-y-3 text-gray-300">
                         <li>
-                            <a href="https://maps.app.goo.gl/HGUPLBcdZh1KMU8q8?g_st=ac" target="_blank"
-                                class="hover:text-[#9ACBD0] transition flex items-start">
+                            <a href="https://maps.app.goo.gl/TnHUTz3sAprAHR8e7?g_st=aw" target="_blank"
+                                class=" text-white-400 hover:text-blue-600 ">
                                 <span class="mr-2">•</span><span>Chakan</span>
                             </a>
                         </li>
                         <li>
                             <a href="https://maps.app.goo.gl/kk4Dk5w5zhRBbKaR8?g_st=aw" target="_blank"
-                                class="hover:text-[#9ACBD0] transition flex items-start">
+                                class=" text-white-400 hover:text-blue-600 ">
                                 <span class="mr-2">•</span><span>Baner</span>
                             </a>
                         </li>
                         <li>
-                            <a href="https://maps.app.goo.gl/TnHUTz3sAprAHR8e7?g_st=aw" target="_blank"
-                                class="hover:text-[#9ACBD0] transition flex items-start">
+                            <a href="https://maps.app.goo.gl/u9PA8AFYJdcHU3qw5" target="_blank"
+                                class="text-white-400 hover:text-blue-600 ">
                                 <span class="mr-2">•</span><span>Wakad</span>
                             </a>
                         </li>
@@ -556,7 +602,7 @@
                     <div class="space-y-3 text-gray-300">
                         <p>
                             <a href="tel:+919552552455" class="hover:text-[#9ACBD0] transition flex items-center">
-                                <i class="fas fa-phone mr-3 w-5"></i>+91 9552552455
+                                <i class="fas fa-phone mr-3 w-5"></i>+91&nbsp; 9552552455
                             </a>
                         </p>
                         <p>
