--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
                 class="flex flex-col sm:flex-row items-center space-y-2 sm:space-y-0 sm:space-x-4 text-xs sm:text-sm text-white">
                 <span>
                     <a href="tel:+919552552455" class="hover:text-[#1B6B93] transition">
-                        <i class="fas fa-phone mr-1 sm:mr-2"></i>+91&nbsp; 9552552455
+                        <i class="fas fa-phone mr-1 sm:mr-2"></i>+91&nbsp;955&nbsp;255&nbsp;2455
                     </a>
                 </span>
                 <span class="hidden sm:inline">
@@ -250,7 +250,7 @@
                                 <p class="text-gray-600 text-sm sm:text-base">
                                     <a href="tel:+919552552455"
                                         class="hover:text-blue-700 transition-colors duration-200">
-                                        +91&nbsp; 9552552455
+                                        +91&nbsp;955&nbsp;255&nbsp;2455
                                     </a>
                                 </p>
                             </div>
@@ -323,7 +323,7 @@
                                 </p>
                                 <p class="text-white font-medium text-xs sm:text-sm mb-1">
                                     <a href="tel:+919552552455" class="hover:underline">
-                                        +91&nbsp; 95525 52455
+                                        +91&nbsp;955&nbsp;255&nbsp;2455
                                     </a>
                                 </p>
                                 <p class="text-white font-medium text-xs sm:text-sm break-all">
@@ -365,7 +365,7 @@
                                 </p>
                                 <p class="text-white font-medium text-xs sm:text-sm mb-1">
                                     <a href="tel:+919552552455" class="hover:underline">
-                                        +91 &nbsp;95525 52455
+                                        +91 &nbsp;955&nbsp;255&nbsp;2455
                                     </a>
                                 </p>
                                 <p class="text-white font-medium text-xs sm:text-sm break-all">
@@ -407,7 +407,7 @@
                                 </p>
                                 <p class="text-white font-medium text-xs sm:text-sm mb-1">
                                     <a href="tel:+919552552455" class="hover:underline">
-                                        +91&nbsp; 95525 52455
+                                        +91&nbsp;955&nbsp;255&nbsp;2455
                                     </a>
                                 </p>
                                 <p class="text-white font-medium text-xs sm:text-sm break-all">
@@ -592,7 +592,7 @@
                     <div class="space-y-3 text-gray-300">
                         <p>
                             <a href="tel:+919552552455" class="hover:text-[#9ACBD0] transition flex items-center">
-                                <i class="fas fa-phone mr-3 w-5"></i>+91&nbsp; 9552552455
+                                <i class="fas fa-phone mr-3 w-5"></i>+91&nbsp;955&nbsp;255&nbsp;2455
                             </a>
                         </p>
                         <p>
