--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. Sutariya Bone and Joint Care</title>
+    <title>Dr. Chandrashekhar Bone and Joint Care</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script type="text/javascript"
@@ -109,7 +109,7 @@
                 class="flex flex-col sm:flex-row items-center space-y-2 sm:space-y-0 sm:space-x-4 text-xs sm:text-sm text-white">
                 <span>
                     <a href="tel:+919552552455" class="hover:text-[#1B6B93] transition">
-                        <i class="fas fa-phone mr-1 sm:mr-2"></i>+91&nbsp; 9552552455
+                        <i class="fas fa-phone mr-1 sm:mr-2"></i>+91&nbsp;955&nbsp;255&nbsp;2455
                     </a>
                 </span>
                 <span class="hidden sm:inline">
@@ -373,7 +373,7 @@
                             <i class="fas fa-phone text-[#0D5C75] mr-3"></i>
                             <a href="tel:+919552552455"
                                 class="text-gray-700 hover:text-blue-600 transition duration-200">
-                                +91&nbsp; 95525 52455
+                                +91&nbsp; 955&nbsp;255&nbsp;2455
                             </a>
                         </div>
                     </div>
@@ -415,7 +415,7 @@
             <a href="tel:+919552552455">
                 <button
                     class="group bg-white text-[#164B60] px-6 sm:px-8 py-2 sm:py-3 rounded-lg font-semibold text-base sm:text-lg transition duration-300 ease-in-out hover:bg-gradient-to-r hover:from-[#B3EAF2] hover:via-[#D4F1F9] hover:to-[#EAFBFF]">
-                    <i class="fas fa-phone mr-2"></i>Call Now: +91&nbsp; 9552552455
+                    <i class="fas fa-phone mr-2"></i>Call Now: +91&nbsp; 955&nbsp;255&nbsp;2455
                 </button>
             </a>
         </div>
@@ -602,7 +602,7 @@
                     <div class="space-y-3 text-gray-300">
                         <p>
                             <a href="tel:+919552552455" class="hover:text-[#9ACBD0] transition flex items-center">
-                                <i class="fas fa-phone mr-3 w-5"></i>+91&nbsp; 9552552455
+                                <i class="fas fa-phone mr-3 w-5"></i>+91&nbsp;955&nbsp;255&nbsp;2455
                             </a>
                         </p>
                         <p>
