--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
                 class="flex flex-col sm:flex-row items-center space-y-2 sm:space-y-0 sm:space-x-4 text-xs sm:text-sm text-white">
                 <span>
                     <a href="tel:+919552552455" class="hover:text-[#1B6B93] transition">
-                        <i class="fas fa-phone mr-1 sm:mr-2"></i>+91&nbsp; 9552552455
+                        <i class="fas fa-phone mr-1 sm:mr-2"></i>+91&nbsp;955&nbsp;255&nbsp;2455
                     </a>
                 </span>
                 <span class="hidden sm:inline">
@@ -275,8 +275,7 @@
                                 </div>
                                 <div>
                                     <p class="text-sm text-gray-600">Contact</p>
-                                    <a href="tel:+919552552455" class="font-medium hover:text-[#1B6B93]">+91&nbsp; 95525
-                                        52455</a>
+                                    <a href="tel:+919552552455" class="font-medium hover:text-[#1B6B93]">+91&nbsp;955&nbsp;255&nbsp;2455</a>
                                 </div>
                             </div>
                             <div class="flex items-center">
@@ -619,7 +618,7 @@
                     <div class="space-y-3 text-gray-300">
                         <p>
                             <a href="tel:+919552552455" class="hover:text-[#9ACBD0] transition flex items-center">
-                                <i class="fas fa-phone mr-3 w-5"></i>+91&nbsp; 9552552455
+                                <i class="fas fa-phone mr-3 w-5"></i>+91&nbsp;955&nbsp;255&nbsp;2455
                             </a>
                         </p>
                         <p>
