--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     </a>
                 </span>
                 <div class="flex space-x-3 text-base sm:text-lg">
-                    <a href="https://www.facebook.com" target="_blank"
+                    <a href="https://www.facebook.com/share/19EMF6EZgu/" target="_blank"
                         class="text-white hover:text-[#1B6B93] transition">
                         <i class="fab fa-facebook"></i>
                     </a>
@@ -141,8 +141,8 @@
             <div class="flex justify-between items-center">
                 <!-- Logo and Doctor Info -->
                 <div class="flex items-center space-x-2 sm:space-x-4">
-                  <img src="img/logo.png" alt="Clinic Logo" 
-             class="h-12 w-12 sm:h-16 sm:w-16 md:h-20 md:w-20 object-contain">
+                    <img src="img/logo.png" alt="Clinic Logo"
+                        class="h-12 w-12 sm:h-16 sm:w-16 md:h-20 md:w-20 object-contain">
 
                     <div>
                         <h1 class="text-lg sm:text-xl lg:text-2xl font-bold text-[#0D5C75] leading-tight">
@@ -289,11 +289,12 @@
 
                     </h3>
 
-                    <p class="text-base sm:text-lg text-gray-600 mb-3 sm:mb-4">Consultant Orhtopaedic- Knee and Hip
+                    <p class="text-base sm:text-lg text-gray-600 mb-3 sm:mb-4">Consultant Orthopaedic - Knee and Hip
                         Joint Replacement Surgeon</p>
                     <p class="text-sm sm:text-base text-gray-700 mb-4 sm:mb-6 leading-relaxed">
                         Dr. Chandrashekhar S. Sonawane, a renowned Orthopedic and Joint Replacement Surgeon based in
-                        Pune, extends his expertise across Nashik, Jalgaon,Goa, Solapur , and Nandurbar districts. Known for his
+                        Pune, extends his expertise across Nashik, Jalgaon,Goa, Solapur , and Nandurbar districts. Known
+                        for his
                         patient-first approach, he combines surgical excellence with a strong emphasis on prevention
                         over intervention, ensuring holistic and compassionate orthopedic care.
                     </p>
@@ -342,7 +343,7 @@
                                 <i class="fas fa-map-marker-alt text-[#0D5C75] mr-3 mt-1"></i>
                                 <a href="https://maps.app.goo.gl/kk4Dk5w5zhRBbKaR8?g_st=aw" target="_blank"
                                     class=" text-[#164B60] hover:text-blue-600 hover:underline">
-                                    <strong>Baner –</strong> A-201, Comfort Zone Next, Baner-Balewadi Road, Near New Era
+                                    <strong>Baner –</strong> A-201, Comfort Zone Nest, Baner-Balewadi Road, Near New Era
                                     Bakery, Baner, Pune 411045
                                 </a>
                             </div>
@@ -359,7 +360,7 @@
                                 <a href="https://maps.app.goo.gl/u9PA8AFYJdcHU3qw5" target="_blank"
                                     class=" text-[#164B60] hover:text-blue-600 hover:underline">
                                     <strong>Wakad –</strong> 206 - Second Floor, Solitaire Business Hub, Opp. to
-                                    Ambiance hotel, Vishnu devnagar, wakad, Pune - 411057
+                                    Ambience hotel, Vishnu devnagar, wakad, Pune - 411057
                                     </span>
                             </div>
                             <div class="flex items-center ml-6">
@@ -475,7 +476,7 @@
                     <!-- <p class="text-sm sm:text-base text-gray-600">Renowned for Cardiology & Critical Care</p> -->
                 </div>
                 <div class="text-center">
-                    <img src="img/manipal.jpg" alt="Manipal Center"
+                    <img src="img/Manipal.jpg" alt="Manipal Hospital"
                         class="w-32 h-32 sm:w-40 sm:h-40 lg:w-48 lg:h-48 rounded-full shadow-[0_8px_16px_rgba(0,0,0,0.6)] mx-auto mb-4 sm:mb-5 object-cover">
                     <h4 class="text-lg sm:text-xl font-semibold text-[#164B60] mb-2">Manipal Hospital</h4>
                     <!-- <p class="text-sm sm:text-base text-gray-600">Expertise in Diagnostics & Surgical Procedures</p> -->
@@ -612,10 +613,11 @@
                             </a>
                         </p>
                         <div class="flex space-x-5 pt-2 text-xl">
-                            <a href="https://www.facebook.com" target="_blank" class="hover:text-[#9ACBD0] transition">
+                            <a href="https://www.facebook.com/share/19EMF6EZgu/" target="_blank" class="hover:text-[#9ACBD0] transition">
                                 <i class="fab fa-facebook"></i>
                             </a>
-                            <a href="https://www.instagram.com" target="_blank" class="hover:text-[#9ACBD0] transition">
+                            <a href="https://www.instagram.com/dr.shekhars_boneandjointclinic/profilecard/?igsh=MWw1YXUxdDU5YzB5dQ=="
+                                target="_blank" class="hover:text-[#9ACBD0] transition">
                                 <i class="fab fa-instagram"></i>
                             </a>
                             <a href="https://wa.me/919552552455" target="_blank"
