--- a/services.html
+++ b/services.html
@@ -114,7 +114,7 @@
                     </a>
                 </span>
                 <div class="flex space-x-3 text-base sm:text-lg">
-                    <a href="https://www.facebook.com" target="_blank"
+                    <a href="https://www.facebook.com/share/19EMF6EZgu/" target="_blank"
                         class="text-white hover:text-[#1B6B93] transition">
                         <i class="fab fa-facebook"></i>
                     </a>
@@ -388,10 +388,10 @@
                             </a>
                         </p>
                         <div class="flex space-x-5 pt-2 text-xl">
-                            <a href="https://www.facebook.com" target="_blank" class="hover:text-[#9ACBD0] transition">
+                            <a href="https://www.facebook.com/share/19EMF6EZgu/" target="_blank" class="hover:text-[#9ACBD0] transition">
                                 <i class="fab fa-facebook"></i>
                             </a>
-                            <a href="https://www.instagram.com" target="_blank" class="hover:text-[#9ACBD0] transition">
+                            <a href="https://www.instagram.com/dr.shekhars_boneandjointclinic/profilecard/?igsh=MWw1YXUxdDU5YzB5dQ==" target="_blank" class="hover:text-[#9ACBD0] transition">
                                 <i class="fab fa-instagram"></i>
                             </a>
                             <a href="https://wa.me/919552552455" target="_blank"
