--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
                     </a>
                 </span>
                 <div class="flex space-x-3 text-base sm:text-lg">
-                    <a href="https://www.facebook.com" target="_blank"
+                    <a href="https://www.facebook.com/share/19EMF6EZgu/" target="_blank"
                         class="text-white hover:text-[#1B6B93] transition">
                         <i class="fab fa-facebook"></i>
                     </a>
@@ -244,7 +244,7 @@
                             M.B.B.S., M.S. (Ortho), Fellowship in Joint Replacement
                         </p>
                         <p class="text-xl text-[#164B60] font-semibold border-l-4 border-[#4FC0D0] pl-4 py-1">
-                            Consultant Orhtopaedic- Knee and Hip Joint Replacement Surgeon
+                            Consultant Orthopaedic - Knee and Hip Joint Replacement Surgeon
                         </p>
                     </div>
 
@@ -389,7 +389,7 @@
                                 <li class="flex">
                                     <span class="bg-[#1B6B93] flex-shrink-0 w-2 h-2 rounded-full mt-2 mr-2"></span>
                                     <span>
-                                        <strong>Further training at</strong> - Seth G.S. Medical College & KEM Hospital
+                                        <strong>Further experience at</strong> - Seth G.S. Medical College & KEM Hospital
 
                                     </span>
                                 </li>
@@ -450,49 +450,36 @@
         </div>
     </section>
 
-    <!-- Experience Section -->
-    <section class="py-8 sm:py-12 md:py-16 bg-gray-50">
-        <div class="container mx-auto px-4">
-            <h2 class="text-2xl sm:text-3xl font-bold text-center text-[#164B60] mb-8 sm:mb-12">Professional Experience
-            </h2>
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8">
-                <div class="text-center p-4 sm:p-6 bg-white rounded-lg shadow-sm">
-                    <div
-                        class="bg-purple-600 text-white w-16 h-16 sm:w-20 sm:h-20 rounded-full flex items-center justify-center mx-auto mb-4">
-                        <span class="text-xl sm:text-2xl font-bold">12+</span>
-                    </div>
-                    <h3 class="text-lg sm:text-xl font-semibold text-[#164B60] mb-2">Years Experience</h3>
-                    <!-- <p class="text-sm sm:text-base text-gray-600">Extensive experience in orthopedic surgery</p> -->
-                </div>
-                <div
-                    class="text-center p-4 sm:p-6 bg-white rounded-lg shadow-sm hover:shadow-md transition-shadow duration-300">
-                    <!-- Counter Circle -->
-                    <div
-                        class="bg-orange-500 text-white w-16 h-16 sm:w-20 sm:h-20 md:w-22 md:h-22 rounded-full flex items-center justify-center mx-auto mb-4">
-                        <span class="text-xl sm:text-2xl font-bold">4500+</span>
-                    </div>
-
-                    <!-- Content -->
-                    <div>
-                        <h3 class="text-base sm:text-lg md:text-xl font-semibold text-[#164B60] mb-2 leading-tight">
-                            Experience in Joint Replacement Surgeries
-                        </h3>
-                        <!-- Optional description (commented out) -->
-                        <!-- <p class="text-xs sm:text-sm text-gray-600 mt-2">Promoting Joint Health & Prevention</p> -->
-                    </div>
-                </div>
-                <div class="text-center p-4 sm:p-6 bg-white rounded-lg shadow-sm sm:col-span-2 lg:col-span-1">
-                    <div
-                        class="bg-green-600 text-white w-16 h-16 sm:w-20 sm:h-20 rounded-full flex items-center justify-center mx-auto mb-4">
-                        <span class="text-xl sm:text-2xl font-bold">200+</span>
-                    </div>
-                    <h3 class="text-lg sm:text-xl font-semibold text-[#164B60] mb-2">Robotic Joint Replacements
-                        Performed</h3>
-                    <!-- <p class="text-sm sm:text-base text-gray-600">Precision-Driven Surgeries for Faster Recovery</p> -->
-                </div>
-            </div>
+  <!-- Experience Section - Alternative Layout -->
+<section class="py-12 sm:py-16 bg-gray-50">
+  <div class="container mx-auto px-4">
+    <h2 class="text-3xl font-bold text-center text-[#164B60] mb-12">Professional Experience</h2>
+    
+    <div class="flex flex-col sm:flex-row justify-center gap-6 max-w-4xl mx-auto">
+      <!-- Card 1 -->
+      <div class="flex-1 bg-white p-8 rounded-xl shadow-md hover:shadow-lg transition-all duration-300">
+        <div class="flex flex-col items-center">
+          <div class="bg-purple-600 text-white w-20 h-20 rounded-full flex items-center justify-center mb-6">
+            <span class="text-2xl font-bold">12+</span>
+          </div>
+          <h3 class="text-xl font-semibold text-[#164B60] text-center">Years Experience</h3>
         </div>
-    </section>
+      </div>
+      
+      <!-- Card 2 -->
+      <div class="flex-1 bg-white p-8 rounded-xl shadow-md hover:shadow-lg transition-all duration-300">
+        <div class="flex flex-col items-center">
+          <div class="bg-orange-500 text-white w-20 h-20 rounded-full flex items-center justify-center mb-6">
+            <span class="text-2xl font-bold">4500+</span>
+          </div>
+          <h3 class="text-xl font-semibold text-[#164B60] text-center leading-tight">
+            Joint Replacement Surgeries
+          </h3>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
     <!-- Mission vision Section -->
     <section class="py-16 bg-gradient-to-b from-blue-50 to-white">
@@ -513,7 +500,7 @@
                             </div>
                             <h2 class="text-2xl font-bold text-gray-800">Our Vision</h2>
                         </div>
-                        <p class="text-gray-600 leading-relaxed">
+                        <p class="text-gray-600 leading-relaxed  text-justify">
                             To revolutionize joint healthcare by establishing a new paradigm where cutting-edge
                             robotic-assisted surgeries, personalized regenerative therapies, and proactive prevention
                             strategies converge. We envision becoming the global benchmark for musculoskeletal care,
@@ -539,10 +526,9 @@
                             <h2 class="text-2xl font-bold text-gray-800">Our Mission</h2>
                         </div>
 
-                        <div class="space-y-6 text-gray-600 leading-relaxed">
+                        <div class="space-y-6 text-gray-600 leading-relaxed  text-justify">
                             <p>
-                                At our core, we are dedicated to surgical excellence, employing the most advanced
-                                robotic and computer-assisted technologies to achieve unprecedented precision in joint
+                               At our core we are dedicated to surgical excellence, combining hard earned experience and advanced technologies to achieve unprecedented precision in joint
                                 replacement procedures. Our patient-centered approach ensures each treatment plan is
                                 meticulously tailored to individual needs and lifestyle goals.
                             </p>
@@ -628,10 +614,10 @@
                             </a>
                         </p>
                         <div class="flex space-x-5 pt-2 text-xl">
-                            <a href="https://www.facebook.com" target="_blank" class="hover:text-[#9ACBD0] transition">
+                            <a href="https://www.facebook.com/share/19EMF6EZgu/" target="_blank" class="hover:text-[#9ACBD0] transition">
                                 <i class="fab fa-facebook"></i>
                             </a>
-                            <a href="https://www.instagram.com" target="_blank" class="hover:text-[#9ACBD0] transition">
+                            <a href="https://www.instagram.com/dr.shekhars_boneandjointclinic/profilecard/?igsh=MWw1YXUxdDU5YzB5dQ==" target="_blank" class="hover:text-[#9ACBD0] transition">
                                 <i class="fab fa-instagram"></i>
                             </a>
                             <a href="https://wa.me/919552552455" target="_blank"
