--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
                     </a>
                 </span>
                 <div class="flex space-x-3 text-base sm:text-lg">
-                    <a href="https://www.facebook.com" target="_blank"
+                    <a href="https://www.facebook.com/share/19EMF6EZgu/" target="_blank"
                         class="text-white hover:text-[#1B6B93] transition">
                         <i class="fab fa-facebook"></i>
                     </a>
@@ -235,7 +235,7 @@
                                 <p class="text-gray-600 text-sm sm:text-base">
                                     <a href="https://maps.app.goo.gl/TnHUTz3sAprAHR8e7?g_st=aw" target="_blank"
                                         class="text-grey-600 hover:text-blue-600 hover:underline transition-colors duration-200">
-                                        Dr. Shekhar’s Bone and Joint Clinic
+                                       Dr. ShekharS Bone and Joint Clinic
                                         208, Second Floor, Crown World, Mutkewadi, Pune-Nashik Highway, Chakan, Pune –
                                         410501
                                     </a>
@@ -317,7 +317,7 @@
                             <div>
                                 <h3 class="text-lg sm:text-xl font-semibold mb-2 sm:mb-3">Chakan</h3>
                                 <p class="text-xs sm:text-sm mb-3 sm:mb-5">
-                                    Dr. Shekhar’s Bone and Joint Clinic
+                                 Dr. ShekharS Bone and Joint Clinic
                                     208, Second Floor, Crown World, Mutkewadi, Pune-Nashik Highway, Chakan, Pune –
                                     410501
                                 </p>
@@ -359,8 +359,8 @@
                             <div>
                                 <h3 class="text-lg sm:text-xl font-semibold mb-2 sm:mb-3">Baner</h3>
                                 <p class="text-xs sm:text-sm mb-3 sm:mb-5">
-                                    Dr. Shekhar’s Bone and Joint Clinic
-                                    A-201, Comfort Zone Next, Baner-Balewadi Road,
+                                  Dr. ShekharS Bone and Joint Clinic
+                                    A-201, Comfort Zone Nest, Baner-Balewadi Road,
                                     Near New Era Bakery, Baner, Pune – 411045
                                 </p>
                                 <p class="text-white font-medium text-xs sm:text-sm mb-1">
@@ -401,7 +401,7 @@
                             <div>
                                 <h3 class="text-lg sm:text-xl font-semibold mb-2 sm:mb-3">Wakad</h3>
                                 <p class="text-xs sm:text-sm mb-3 sm:mb-5">
-                                    Dr. Shekhar’s Bone and Joint Clinic<br>
+                                    Dr. ShekharS Bone and Joint Clinic<br>
                                     206, Second Floor, Solitaire Business Hub,<br>
                                     Opposite Ambience Hotel, Vishnu Devnagar, Wakad, Pune – 411057
                                 </p>
@@ -602,10 +602,10 @@
                             </a>
                         </p>
                         <div class="flex space-x-5 pt-2 text-xl">
-                            <a href="https://www.facebook.com" target="_blank" class="hover:text-[#9ACBD0] transition">
+                            <a href="https://www.facebook.com/share/19EMF6EZgu/" target="_blank" class="hover:text-[#9ACBD0] transition">
                                 <i class="fab fa-facebook"></i>
                             </a>
-                            <a href="https://www.instagram.com" target="_blank" class="hover:text-[#9ACBD0] transition">
+                            <a href="https://www.instagram.com/dr.shekhars_boneandjointclinic/profilecard/?igsh=MWw1YXUxdDU5YzB5dQ==" target="_blank" class="hover:text-[#9ACBD0] transition">
                                 <i class="fab fa-instagram"></i>
                             </a>
                             <a href="https://wa.me/919552552455" target="_blank"
