--- a/expertise.html
+++ b/expertise.html
@@ -136,69 +136,64 @@
     </div>
 
     <!-- Main Header -->
-    <header class="bg-white shadow-md">
-        <div class="container mx-auto px-2 sm:px-4 py-2 sm:py-4">
-            <div class="flex justify-between items-center">
-                <!-- Logo and Doctor Info -->
-                <div class="flex items-center space-x-2 sm:space-x-4">
-                    <img src="img/logo.png" alt="Clinic Logo"
-                        class="h-12 w-12 sm:h-16 sm:w-16 md:h-20 md:w-20 object-contain">
-                    <div>
-                        <h1 class="text-lg sm:text-xl lg:text-2xl font-bold text-[#0D5C75] leading-tight">
-                            Dr. Chandrashekhar Sonawane
-                        </h1>
-                        <p class="text-xs sm:text-sm lg:text-base text-[#1B6B93] leading-tight">Orthopaedic-Joint
-                            Replacement Surgeon
-                        </p>
-                    </div>
+<header class="bg-white shadow-md">
+    <div class="container mx-auto px-2 sm:px-4 py-2 sm:py-4">
+        <div class="flex justify-between items-center">
+            <!-- Logo and Doctor Info -->
+            <div class="flex items-center space-x-2 sm:space-x-4">
+                <img src="img/logo.png" alt="Clinic Logo"
+                    class="h-12 w-12 sm:h-16 sm:w-16 md:h-20 md:w-20 object-contain">
+
+                <div>
+                    <h1 class="text-lg sm:text-xl lg:text-2xl font-bold text-[#0D5C75] leading-tight">
+                        Dr. Chandrashekhar Sonawane
+                    </h1>
+                    <p class="text-xs sm:text-sm lg:text-base text-[#1B6B93] leading-tight">Orthopaedic-Joint
+                        Replacement Surgeon
+                    </p>
                 </div>
-
-                <!-- Navigation and Translate -->
-                <div class="flex items-center space-x-2 sm:space-x-6">
-                    <!-- Desktop Navigation -->
-                    <nav class="hidden lg:flex space-x-4 xl:space-x-6">
-                        <a href="index.html"
-                            class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] text-sm xl:text-base">Home</a>
-                        <a href="about.html"
-                            class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] text-sm xl:text-base">About
-                            Doctor</a>
-                        <a href="facility.html"
-                            class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] text-sm xl:text-base">Facility</a>
-                        <a href="services.html"
-                            class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] text-sm xl:text-base">Services</a>
-                        <a href="expertise.html"
-                            class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] text-sm xl:text-base">Expertise</a>
-                        <a href="contact.html"
-                            class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] text-sm xl:text-base">Contact
-                            Us</a>
-                    </nav>
-
-                    <!-- Google Translate - Always Visible -->
-                    <div id="google_translate_element"
-                        class="relative bottom-4 sm:bottom-8 left-1 sm:left-2 w-8 sm:w-8.5"></div>
-                </div>
-
-                <!-- Mobile Menu Button -->
-                <button id="mobile-menu-btn" class="lg:hidden p-2">
-                    <i class="fas fa-bars text-xl sm:text-2xl"></i>
-                </button>
             </div>
 
-            <!-- Mobile Navigation -->
-            <nav id="mobile-menu" class="lg:hidden hidden mt-4 pb-4">
-                <div class="flex flex-col space-y-3 sm:space-y-2">
-                    <a href="index.html" class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] py-2">Home</a>
-                    <a href="about.html" class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] py-2">About Doctor</a>
-                    <a href="facility.html" class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] py-2">Facility</a>
-                    <a href="services.html" class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] py-2">Services</a>
+            <!-- Navigation -->
+            <div class="flex items-center space-x-2 sm:space-x-6">
+                <!-- Desktop Navigation -->
+                <nav class="hidden lg:flex space-x-4 xl:space-x-6">
+                    <a href="index.html"
+                        class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] text-sm xl:text-base">Home</a>
+                    <a href="about.html"
+                        class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] text-sm xl:text-base">About
+                        Doctor</a>
+                    <a href="facility.html"
+                        class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] text-sm xl:text-base">Facility</a>
+                    <a href="services.html"
+                        class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] text-sm xl:text-base">Services</a>
                     <a href="expertise.html"
-                        class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] py-2">Expertise</a>
-                    <a href="contact.html" class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] py-2">Contact Us</a>
-                    <div id="google_translate_element_mobile" class="py-2"></div>
-                </div>
-            </nav>
+                        class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] text-sm xl:text-base">Expertise</a>
+                    <a href="contact.html"
+                        class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] text-sm xl:text-base">Contact
+                        Us</a>
+                </nav>
+            </div>
+
+            <!-- Mobile Menu Button -->
+            <button id="mobile-menu-btn" class="lg:hidden p-2">
+                <i class="fas fa-bars text-xl sm:text-2xl"></i>
+            </button>
         </div>
-    </header>
+
+        <!-- Mobile Navigation -->
+        <nav id="mobile-menu" class="lg:hidden hidden mt-4 pb-4">
+            <div class="flex flex-col space-y-3 sm:space-y-2">
+                <a href="index.html" class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] py-2">Home</a>
+                <a href="about.html" class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] py-2">About Doctor</a>
+                <a href="facility.html" class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] py-2">Facility</a>
+                <a href="services.html" class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] py-2">Services</a>
+                <a href="expertise.html" class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] py-2">Expertise</a>
+                <a href="contact.html" class="text-[#0D5C75] font-semibold hover:text-[#19A7CE] py-2">Contact Us</a>
+            </div>
+        </nav>
+    </div>
+</header>
 
     <!-- Page Header -->
     <section class="bg-gradient-to-r from-[#164B60] via-[#1B6B93] to-[#4FC0D0] text-white py-8 sm:py-12 md:py-16">
@@ -470,7 +465,7 @@
 
             <!-- Copyright -->
             <div class="border-t border-gray-700 mt-12 pt-8 text-center text-gray-400">
-                <p>&copy; 2025 Dr.Chandrashekhar S Bone and Joint Clinic. All rights reserved.</p>
+                <p>&copy;2025 Dr.ShekharS Bone and Joint Clinic. All rights reserved. Developed by Kunash Media</p>
             </div>
         </div>
     </footer>
